# tabd

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  install.sh  package.json
.claude/skills/tabd/: SKILL.md
.github/workflows/: binary-release.yml  ci.yml
crates/ai-browser/: Cargo.toml
crates/ai-browser/src/: cdp.rs  cli.rs  daemon.rs  main.rs  secrets.rs
crates/ai-browser/src/cmd/: ax.rs  fetch_text.rs  get_text.rs
crates/cdp-spike/: Cargo.toml
crates/cdp-spike/src/: browser.rs  cdp.rs  daemon.rs  main.rs
crates/cdp-spike/src/cmd/: eval.rs  fetch_text.rs  find_all.rs  get_text.rs  mod.rs  navigate.rs  page.rs  query_all.rs
crates/tabd/: Cargo.toml
crates/tabd/src/: browser.rs  cdp.rs  cli.rs  daemon.rs  main.rs  secrets.rs  skill.rs
crates/tabd/src/cmd/: ax.rs  eval.rs  fetch_text.rs  find_all.rs  get_text.rs  mod.rs  page.rs  query_all.rs
crates/tabd/src/daemon/: capture.rs  dom.rs  error.rs  interaction.rs  monitor.rs  secrets.rs  storage.rs  tabs.rs  waits.rs
docs/: architecture.md  commands.md  cookbook.md  operations.md  rust-chromium-spike-plan.md  spike-phase-1a-text-semantics-plan.md  spike-phase-1b-accessibility-plan.md  spike-phase-1c-query-all-plan.md  spike-phase-1d-find-all-meta-plan.md
docs/history/: README.md  rust-chromium-spike-plan.md  spike-phase-2-daemon-plan.md  spike-phase-2b-driver-actions-plan.md
scripts/: soak.sh
src/cli/: daemonClient.ts  index.ts
src/server/: bridge.ts  daemon.ts  index.ts  keychain.ts  persistentSecrets.ts  secrets.ts
src/server/__tests__/: actionQueue.test.ts  persistentSecrets.test.ts  processMonitor.test.ts  snapshotKeeper.test.ts  urlMatch.test.ts
src/server/runtimes/: cdp.ts  fetch.ts  playwright.ts
src/server/tools/: secrets.ts  wait.ts
src/server/utils/: actionQueue.ts  processMonitor.ts  snapshotKeeper.ts
src/shared/: daemonPaths.ts  protocol.ts  urlMatch.ts
tests/: cli-direct-smoke.sh  e2e-action-queue.mjs  e2e-crash-restore.mjs  e2e-daemon-drain.mjs  e2e-mcp-daemon.mjs  e2e-rss-monitor.mjs  e2e-run-once.mjs  e2e-secrets-cli.mjs  e2e-secrets-persistent.mjs  e2e-wait-url.mjs  spike-daemon-compat.sh  spike-parity.sh
