[package]
name = "cdp-spike"
version = "0.1.0"
edition = "2024"
publish = false
description = "Rust + Chromium CDP spike for ai-browser (parity exploration, not production)"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "time", "sync"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
