[package]
name = "tabd"
version = "0.1.0"
edition = "2024"
publish = false
description = "Rust + Chromium CDP browser controller (CLI + daemon)"

[[bin]]
name = "tabd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "time", "sync", "net", "signal"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
regex = "1"
base64 = "0.22"
# Phase 3f secrets vault.
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
