[package]
name = "tabd"
version = "0.1.0"
edition = "2024"
publish = false
description = "Rust + Chromium CDP browser controller (CLI + daemon)"
license = "MIT"
repository = "https://github.com/marshallku/tabd"
homepage = "https://github.com/marshallku/tabd"
keywords = ["browser", "chromium", "cdp", "automation", "cli"]
categories = ["command-line-utilities", "development-tools", "web-programming"]

[[bin]]
name = "tabd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "time", "sync", "net", "signal"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
regex = "1"
base64 = "0.22"
# Phase 3f secrets vault.
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Release tuning. The daemon is long-lived and the CLI is invoked once per
# action, so optimize for runtime CPU + binary size over compile time:
#   - lto=true (fat): cross-crate inlining / dead-code elimination
#   - codegen-units=1: max optimization (slower build, but this crate is small)
#   - strip: drop symbols (~23% smaller binary; CI stripped manually before)
#   - panic=abort: no unwind tables (smaller binary). A panic aborts the daemon
#     instead of unwinding one task — acceptable here: the CLI auto-respawns the
#     daemon on the next call, and abort avoids leaving a half-poisoned mutex
#     behind. `cargo test` uses the dev profile (unwind), so tests are unaffected.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
